chore: Updated pre-commit hooks.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -90,6 +90,10 @@ repos:
       - id: mixed-line-ending
         name: Check for mixed line endings
         args: ['--fix=lf']
+      - id: check-executables-have-shebangs
+        name: Check executables start with '#!'
+      - id: check-shebang-scripts-are-executable
+        name: Check scripts starting with '#!' are executable
       - id: detect-private-key
         name: Detect private keys
       - id: detect-aws-credentials
